<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_users"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mms.ManageUsersActivity">

    <TextView
        android:text="@string/titleUserManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleUserManagement"
        android:textSize="40sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/titleUserManagement"
        android:layout_marginTop="15dp"
        android:id="@+id/userId"
        android:inputType="text"
        android:hint="@string/userId"
        android:layout_alignLeft="@+id/titleUserManagement"
        android:layout_alignStart="@+id/titleUserManagement"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_below="@+id/userId"
        android:layout_alignLeft="@+id/userId"
        android:layout_alignStart="@+id/userId"
        android:inputType="text"
        android:hint="@string/userName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/userPassword"
        android:layout_below="@+id/userName"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:hint="@string/userPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btnEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnAddNewUser"
        android:layout_toRightOf="@+id/btnAddNewUser"
        android:layout_toEndOf="@+id/btnAddNewUser"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:id="@+id/btnEditUser" />

    <Button
        android:text="@string/btnViewAllUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnDelUser"
        android:layout_alignLeft="@+id/btnEditUser"
        android:layout_alignStart="@+id/btnEditUser"
        android:id="@+id/btnViewAllUser" />

    <Button
        android:text="@string/btnDelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/btnDelUser"
        android:layout_below="@+id/btnAddNewUser"
        android:layout_alignLeft="@+id/btnAddNewUser"
        android:layout_alignStart="@+id/btnAddNewUser" />

    <Button
        android:text="@string/btnAddNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="88dp"
        android:id="@+id/btnAddNewUser"
        android:layout_below="@+id/userPassword"
        android:layout_alignLeft="@+id/userPassword"
        android:layout_alignStart="@+id/userPassword" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinUserType"
        android:entries="@array/userTypeList"
        android:layout_below="@+id/userType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/userType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userType"
        android:layout_below="@+id/userPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
