<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/titleRectorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/titleRectorText"
        android:textSize="40sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:layout_below="@+id/titleRectorText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:id="@+id/userRector"
        android:hint="@string/userRector"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/userRector"
        android:layout_alignStart="@+id/userRector"
        android:id="@+id/passwordRector"
        android:hint="@string/passwordRector"/>

    <Button
        android:text="@string/btnRectorLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordRector"
        android:layout_alignRight="@+id/passwordRector"
        android:layout_alignEnd="@+id/passwordRector"
        android:layout_marginTop="42dp"
        android:id="@+id/btnRectorLogin" />
</RelativeLayout>
