<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_food"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mms.ManageFoodActivity">

    <TextView
        android:id="@+id/titleFoodManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/titleFoodManagement"
        android:textSize="40sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/foodId"
        android:ems="10"
        android:hint="@string/foodName"
        android:inputType="text" />

    <EditText
        android:id="@+id/foodId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleFoodManagement"
        android:ems="10"
        android:hint="@string/foodId"
        android:inputType="text" />

    <EditText
        android:id="@+id/foodUtensils"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/foodName"
        android:ems="10"
        android:hint="@string/foodUtensils"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinFoodType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/foodTypeList"
        android:layout_below="@+id/foodUtensils"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnAddNewFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinFoodType"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="57dp"
        android:text="@string/btnAddNewFood" />

    <Button
        android:id="@+id/btnEditFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/titleFoodManagement"
        android:layout_alignRight="@+id/titleFoodManagement"
        android:layout_alignTop="@+id/btnAddNewFood"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/btnEditFood" />

    <Button
        android:id="@+id/btnDelFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAddNewFood"
        android:layout_alignStart="@+id/btnAddNewFood"
        android:layout_below="@+id/btnAddNewFood"
        android:layout_marginTop="54dp"
        android:text="@string/btnDelFood" />

    <Button
        android:id="@+id/btnViewAllFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnDelFood"
        android:layout_alignLeft="@+id/btnEditFood"
        android:layout_alignStart="@+id/btnEditFood"
        android:text="@string/btnViewAllFood" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/foodUtensils"
        android:text="Food Type: "
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/foodDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="text"
        android:text="Enter Food Day" />
</RelativeLayout>
