<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rector_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mms.RectorHomeActivity">

    <Button
        android:text="@string/btnViewScheduleRector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:id="@+id/btnViewScheduleRector"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:onClick="onbtnViewScheduleRectorClick"/>

    <Button
        android:text="@string/btnViewTotalUtensils"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnViewScheduleRector"
        android:layout_alignLeft="@+id/btnViewScheduleRector"
        android:layout_alignStart="@+id/btnViewScheduleRector"
        android:layout_marginTop="39dp"
        android:id="@+id/btnViewTotalUtensils"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:onClick="onbtnViewTotalUtensilsClick"/>

    <Button
        android:text="@string/btnViewTotalStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnViewTotalUtensils"
        android:layout_alignRight="@+id/btnViewTotalUtensils"
        android:layout_alignEnd="@+id/btnViewTotalUtensils"
        android:layout_marginTop="41dp"
        android:id="@+id/btnViewTotalStudents"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:onClick="onbtnViewTotalStudentsClick"/>

</RelativeLayout>
